public/css/application.css
@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "Lato";
  font-weight: 100;
  font-size: 30px;
  text-decoration: none;
  color: #808080;
}

#map {
  height: 100%;
  width: 100%;
}

.home {
  position: relative;
  height: 100%;
  width: 100%;
}

.hidden {
  display: none;
}

/*Search bar*/
#search {
  height: 48px;
  border: none;
  background-color: white;
  outline: none;
  background-repeat: no-repeat;
}
#search:hover {
  cursor: pointer;
}
#search:hover::-webkit-input-placeholder {
  color: black;
}
#search:focus::-webkit-input-placeholder {
  color: #808080;
}

/*Login/Register forms*/
.float-div {
  height: 0px;
  width: 0px;
  position: fixed;
  z-index: 22;
  top: 4px;
  left: 36px;
}
.reg-forms {
  position: absolute;
  z-index: 22;
  top: 4px;
  left: 36px;
}
.reg-forms form {
  display: flex;
}
.reg-forms input {
  border: none;
  outline: none;
  background-repeat: no-repeat;
  background-color: white;
  width: 200px;
}
.reg-forms input[type='submit'] {
  visibility: collapse;
}

::-webkit-input-placeholder {
   color: #808080;
}

.btn:visited {
  color: #808080;
}
.btn {
  color: #808080;
}
.nav-list .btn:hover {
  color: black;
}

/*Navbar*/
#navbar-container {
  height: 55px;
}
#navbar-links {
  height: 55px;
  position: fixed;
  z-index: 20;
  overflow: hidden;
  display: flex;
  width: 100%;
  padding-bottom: 5px;
  background-color: white;
  box-shadow: 0px 0px 5px 0px #808080;
}
.nav-list {
  margin: 0px;
  list-style-type: none;
  padding-left: 10px;
  cursor: pointer;
}
.nav-list li {
  display: inline;
  padding-right: 10px;
}
.nav-list a {
  text-decoration: none;
}
.nav-left {
  padding-top: 4px;
  padding-left: 0px;
  margin-left: 5%;
  margin-right: auto;
}
.nav-center {
  padding-top: 5px;
  margin-right: auto;
}
.nav-right {
  margin-left: auto;
  margin-right: 5%;
  padding-top: 10px;
  padding-right: 0px;
}
#header-logo {
  height: 55px;
}

/*#registration-login-links {
  display:flex;
  justify-content: space-around;
}*/

/*.headerDivider {
   border-right: 1px solid;
   height: 50px;
   top: 10px;
   position: absolute;
}*/

/*#login-btn {
  height: 50px;
  width: 190px;
  left: 50%;
  transform: translateX(-50%);
}*/

/*#header_container {
  /*padding-top: 10px;*/
  height: 70px;
  /*display: flex;*/
/*}*/

/*#header-logo {
  height: 50px;
  /*position: absolute;*/
  /*text-align: center;*/
/*}*/

/*#registration-login-links a {
  /*height: inherit;*/
  text-decoration: none;
  font-size: 2em;
  padding-top: 4px;
  /*width: calc(20% - 1em);*/
/*}*/

/*.nav {
  text-align: center;
  margin-top: 0px;
  margin-bottom: 0px;
  /*height: inherit;*/
/*/

/*.nav li{
    display:inline;
    max-width: 275px;
}
.nav a{
    /*display:inline-block;*/
    padding:10px;
}/*/*/

/*.header_div {
  overflow: hidden;
  background-color: white;
  z-index: 20;
  position: fixed;
  width: 100%;
  padding-top: 0px;
}*/

